lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:2: error: ')' expected but integer literal found.
void setPousseeDesiree(int 1) 
                           ^