lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
void setPousseeDesiree(int 1)